--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -33,13 +33,22 @@
       <img src="/assets/league_<%= league.id %>.jpg" style="width:100%;padding-top:2px;padding-bottom:6px;"/>
     </a>
   </div>
+  <div class="col-xs-12 col-sm-6 upcoming_match">
   <% match = Match.where(league_id: league.id).order('match_date_time ASC').first; if match != nil %>
-  <div class="col-xs-12 col-sm-6" style="vertical-align:middle;text-align:center;">
-    <img class="upcoming_matches_team_logo" src="/assets/team_<%= Team.where(id: match.team1ID).first.id %>"/>
-    <span style="vertical-align:middle;"><%= match.match_date_time.strftime("%m-%d-%Y @ %H:%M") %></span>
-    <img class="upcoming_matches_team_logo" src="/assets/team_<%= Team.where(id: match.team2ID).first.id %>"/>
-  </div>
+  <% team1 = Team.where(id: match.team1ID).first; team2 = Team.where(id: match.team2ID).first; %>
+    <a href="/teams/<%= team1.id %>">
+      <img class="upcoming_matches_team_logo" src="/assets/team_<%= team1.id %>"/>
+    </a>
+    <a href="/matches/<%= match.id %>">
+      <%= match.match_date_time.strftime("%m-%d-%Y @ %H:%M") %>
+    </a>
+    <a href="/teams/<%= team2.id %>">
+      <img class="upcoming_matches_team_logo" src="/assets/team_<%= team2.id %>"/>
+    </a>
+  <% else %>
+    <h3>No upcoming matches for this team</h3>
   <% end %>
+  </div>
 </div>
 <% end %>
 
