--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :coachID %>
-    <%= f.text_field :coachID, :value => current_user.id :readonly => true%>
+    <%= f.text_field :coachID, :value => current_user.id, :readonly => true%>
   </div>
 
   <div class="field">
