--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', player: @player %>
 
 <%= link_to 'Show', @player %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'Back', team_path(@team_id) %>
