added my about pic

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -72,9 +72,9 @@
             </figure>
           </li>
           <li>
-            <figure><img src="/assets/sunil.jpg" width="130" height="130" alt="">
+            <figure><img src="/assets/Nguyen.jpg" width="130" height="130" alt="">
               <figcaption>
-                <p class="team_name">Sunil</p>
+                <p class="team_name">Matthew</p>
                 <p class="team_title">Software Engineer</p>
               </figcaption>
             </figure>
