edited league photos and background for sign_in+up

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,24 +5,24 @@
 
 
   <div class="field">
-    <%= f.label :first_name %><br />
+   <div class="field_name"> <%= f.label :first_name %><br /> </div>
     <%= f.text_field :first_name, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %><br />
+   <div class="field_name"> <%= f.label :last_name %><br /> </div>
     <%= f.text_field :last_name %>
   </div>
 
 
 
   <div class="field">
-    <%= f.label :email %><br />
+     <div class="field_name"><%= f.label :email %><br /></div>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+     <div class="field_name"><%= f.label :password %> </div>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -30,7 +30,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <div class="field_name"><%= f.label :password_confirmation %><br /></div>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
