--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,17 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+//Field styling
+.field {
+  color:black
+}
+
+.field_name{
+  color: white
+}
 //From Scaffolds
 body {
-  background-color:#22262D;
+  background-color:#2d332d;
   color: #E4E2F1  ;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
