--- a/app/views/matches/schedule.html.erb
+++ b/app/views/matches/schedule.html.erb
@@ -6,7 +6,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-2 col-md-3 col-lg-3">
+        <div class="col-sm-3 col-md-3 col-lg-3">
             <font face="sans-serif"> Today, 13th of December </front> <br>
               <font face="sans-serif"> Main Arena </front>
         </div>
@@ -14,7 +14,11 @@
         <div class="col-sm-5 col-md-3 col-lg-6">
           <font face="sans-serif" color="#474D95"> <a href="/leagues/1">  League of  Legends </a></font>
             <br>
-              <font face="sans-serif"> ~11:00  MT : Round 1 - Match 1 </font>
+              <font face="sans-serif"> ~11:00  MT :
+                <div class="col-sm-5 col-md-3 col-lg-3"> <img src="/assets/team_1.png" style="width: 20%; height: 20%"/> vs. <img src="/assets/team_2.png" style="width: 15%; height: 15%"/>
+                  <img src="/assets/team_1.png" style="width: 20%; height: 20%"/> vs. <img src="/assets/team_2.png" style="width: 15%; height: 15%"/>
+                </div>
+              </font>
             <br>
               <font face="sans-serif"> ~13:30  MT : Round 2 - Match 2 </font>
             <br>
@@ -32,6 +36,7 @@
         </div>
       </div>
 
+      <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2 col-md-3 col-lg-3">
               <font face="sans-serif"> Today, 13th of December </front> <br>
@@ -58,7 +63,7 @@
           </div>
         </div>
       </div>
-    </div>
+
 
 
 
