updated sponsor logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,7 +28,7 @@
 				<br>
 				<br>
 				<img src="/assets/intel.png" style="width: 10%; height: 10%"/>
-				<img src="/assets/EA_Games_logo.jpg" style="width: 10%; height: 10%"/>
+				<img src="/assets/EA_Sports_logo.png" style="width: 10%; height: 10%"/>
 				<img src="/assets/Unreal_engine_logo.png" style="width: 10%; height: 10%"/>
 			</div>
 		</div>
