--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -18,7 +18,8 @@
           <b>Bio:</b> <%= team.bio %>
         </div>
         <div class="row">
-          <b>Coach:</b> <%= team.coachID %>
+          <b>Coach:</b> <%= coach = User.where(String(team.coachID)).first.first_name if team.coachID %>
+                        <%= coach = User.where(String(team.coachID)).first.last_name if team.coachID %>
         </div>
         <div class="row">
           <h3><%= League.where(id: team.league_id).first.league_name %></h3>
