--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -3,29 +3,87 @@
 <% team1 = Team.where(id: @match.team1ID).first %>
 <% team2 = Team.where(id: @match.team2ID).first %>
 
-<h2><a href='/teams/<%=team1.id%>'><%= team1.team_name %></a> V <a href='/teams/<%=team2.id%>'><%= team2.team_name %></a></h2>
+<!-- Match header, centered and shows match info -->
+<div class="col-xs-8 col-xs-offset-2 match_header">
+  <h2><%= League.where(id: @match.league_id).first.league_name %></h4>
+  <h4><%= @match.match_date_time %></h3>
+  <h4><%= @match.location %></h3>
+</div>
 
-<p>
-  <strong>Match Date/Time:</strong>
-  <%= @match.match_date_time %>
-</p>
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-2 col-sm-5 col-sm-offset-0 match_team">
+    <!-- Score -->
+    <div class="row">
+      <h1>
+        <span class="label label-<% if Integer(@match.team1Score) > Integer(@match.team1Score) %>success<% else %>danger<% end %>">
+          <%= @match.team1Score %>
+        </span>
+      </h1>
+    </div>
+    <!-- Team info -->
+    <div class="row">
+      <h2><a href='/teams/<%=team1.id%>'><%= team1.team_name %></a></h3>
+      <% if team1.coachID != "" %>
+      <h4><%= User.where(id: team1.coachID).first.first_name %> <%= User.where(id: team1.coachID).first.last_name %></h4>
+      <% end %>
+    </div>
+    <!-- Players list -->
+    <div class="row">
+      <% players = Player.where(team_id: team1.id) %>
+      <% if players.count > 0 %>
+        <div class="list-group">
+        <% players.each do |player| %>
+          <a href='/players/<%= player.id %>' class="list-group-item players">
+            <h4 class="list-group-item-heading"><%= player.ign %></h4>
+            <%= player.in_game_role %>
+          </a>
+        <% end %>
+        </div>
+      <% else %>
+          <p class="no-players">No players on this team</p>
+      <% end %>
+    </div>
+    <!-- Stats -->
+    <div class="row">
 
-<p>
-  <strong>Location:</strong>
-  <%= @match.location %>
-</p>
+    </div>
+  </div>
+  <div class="col-xs-0 col-sm-2"></div>
+  <div class="col-xs-8 col-xs-offset-2 col-sm-5 col-sm-offset-0 match_team">
+    <!-- Score -->
+    <div class="row">
+      <h1 style="text-align:center">
+        <span class="label label-<% if Integer(@match.team2Score) > Integer(@match.team1Score) %>success<% else %>danger<% end %>">
+          <%= @match.team2Score %>
+        </span>
+      </h1>
+    </div>
+    <!-- Team info -->
+    <div class="row">
+      <h2><a href='/teams/<%=team2.id%>'><%= team2.team_name %></a></h3>
+      <% if team2.coachID != "" %>
+      <h4><%= User.where(id: team2.coachID).first.first_name %> <%= User.where(id: team2.coachID).first.last_name %></h4>
+      <% end %>
+    </div>
+    <!-- Players list -->
+    <div class="row">
+      <% players = Player.where(team_id: team2.id) %>
+      <% if players.count > 0 %>
+        <div class="list-group">
+        <% players.each do |player| %>
+          <a href='/players/<%= player.id %>' class="list-group-item players">
+            <h4 class="list-group-item-heading"><%= player.ign %></h4>
+            <%= player.in_game_role %>
+          </a>
+        <% end %>
+        </div>
+      <% else %>
+          <p class="no-players">No players on this team</p>
+      <% end %>
+    </div>
+    <!-- Stats -->
+    <div class="row">
 
-<p>
-  <strong>Team1score:</strong>
-  <%= @match.team1Score %>
-</p>
-
-<p>
-  <strong>Team2score:</strong>
-  <%= @match.team2Score %>
-</p>
-
-<p>
-  <strong>League:</strong>
-  <%= League.where(id: @match.league_id).first.league_name %>
-</p>
+    </div>
+  </div>
+</div>
