--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -40,7 +40,11 @@
         </div>
         <div class="col-lg-3">
           <h4>
+            <% if user_signed_in? %>
             <%= link_to "Register", new_league_team_path(league.id), class: "btn btn-primary"%>
+            <% else %>
+            <%= link_to "Register", new_user_session_path, class: "btn btn-primary"%>
+            <% end %>
           </h4>
         </div>
       </div>
