--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <!-- Slideshow -->
+
 <div class="w3-content w3-display-container" style="height:250px;width:100%">
   <img class="mySlides" src="/assets/league_1.jpg" style="height:250px;width:100%">
   <img class="mySlides" src="/assets/league_2.jpg" style="height:250px;width:100%">
@@ -45,6 +46,17 @@ function showDivs(n) {
         <li><%= link_to "Sign up", new_user_registration_path %></li>
         <li><%= link_to "Sign in", new_user_session_path %></li>
       <% end %>
-    </ul>
+     
+       
+        
+        
+       </ul>
+   
   </div>
 </header>
+<div style="float:right; padding:10px;">
+        <%= form_tag(searches_path, :method => "get", id: "search-form") do %>
+        <%= text_field_tag :search, params[:search], placeholder: "Search Leagues, Teams, Players.." %>
+        <%= submit_tag "Search", :name => nil %>
+        <% end %>
+</div>
