--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
       <th>Email</th>
       <th>Phone number</th>
       <th>Coachid</th>
-      <th>Age</th>
+ 
       <th>Region</th>
       <th>Player</th>
       <th colspan="3"></th>
@@ -25,10 +25,10 @@
         <td><%= user.email %></td>
         <td><%= user.phone_number %></td>
         <td><%= user.coachID %></td>
-        <td><%= user.age %></td>
+      
         <td><%= user.region %></td>
         <td><%= user.player %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Show', user_path %></td>
       </tr>
     <% end %>
   </tbody>
