--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -23,8 +23,8 @@
         </a>
     </div>
   </div>
-
-
           <% end %>
-
+          <% if user_signed_in? and current_user.has_any_role? :admin %>
+            <%= link_to "Add Stats", new_statistic_path, class: "btn btn-primary"%>
+          <% end %>
       </html>
