--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
       <th>Last name</th>
       <th>Email</th>
       <th>Phone number</th>
-      <th>Coachid</th>
+   
  
       <th>Region</th>
       <th>Player</th>
@@ -24,11 +24,11 @@
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
         <td><%= user.phone_number %></td>
-        <td><%= user.coachID %></td>
+    
       
         <td><%= user.region %></td>
         <td><%= user.player %></td>
-        <td><%= link_to 'Show', user_path %></td>
+        <td><%= link_to 'Show', users_path %></td>
       </tr>
     <% end %>
   </tbody>
