--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -43,14 +43,14 @@
             <figure><img src="/assets/bhanu.jpg" width="130" height="130" alt="">
               <figcaption>
                 <p class="team_name">Bhanu</p>
-                <p class="team_title">Job Title Here</p>
+                <p class="team_title">Web Developer</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure><img src="/assets/bhanu.jpg" width="130" height="130" alt="">
+            <figure><img src="/assets/Nate.png" width="130" height="130" alt="">
               <figcaption>
-                <p class="team_name">Bhanu</p>
+                <p class="team_name">Nate</p>
                 <p class="team_title">Web Developer</p>
               </figcaption>
             </figure>
