pic added, finished shcedule page, color for sign_in+up fixed

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="field"><%= f.submit "Sign up"%></div>
   </div>
 <% end %>
 
