--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -82,8 +82,8 @@
           <li>
             <figure><img src="/assets/luan.jpg" width="130" height="130" alt="">
               <figcaption>
-                <p class="team_name">Name Goes Here</p>
-                <p class="team_title">Job Title Here</p>
+                <p class="team_name">Luan</p>
+                <p class="team_title">Drone Pilot</p>
               </figcaption>
             </figure>
           </li>
