Remove additional search bar at bottom of footer. And center sponsor photos

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,21 +15,12 @@
 			<a href="/about">About</a>
 			<a href="/contact">Contact</a>
 		</p>
-    <br>
     <div>
 			<h6>eSports &copy; 2016</h6>
 			<h6>Main Event - G Play Civic Center</h6>
 			<h6>Dec 25 - 30, 2016</h6>
 		</div>
-		<div style="float:right;">
-			<%= form_tag(searches_path, :method => "get", id: "search-form") do %>
-    	<span class="field"><%= text_field_tag :search, params[:search], placeholder: "Search..." %></span>
-    	<%= submit_tag "Search", :name => nil %>
-			<% end %>
-		</div>
-		<div class="col-lg-6" align="right">
-			<br>
-			<br>
+		<div align="center">
 			<img src="/assets/intel.png" style="width: 10%; height: 10%"/>
 			<img src="/assets/EA_Sports_logo.png" style="width: 10%; height: 10%"/>
 			<img src="/assets/Unreal_engine_logo.png" style="width: 10%; height: 10%"/>
