--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,53 +1,27 @@
-<!DOCTYPE html>
-<html>
+  <p id="notice"><%= notice %></p>
 
-  <p id="notice">
-    <%= notice %>
-  </p>
-
-  <h1>Leagues</h1>
-
-  <center>
+<h1>Leagues</h1>
+<center>
+  <% @leagues.each do |league| %>
     <div class="row">
-      <div class="col-lg-6">
-        <h2>League:</h2>
+      <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0">
+        <a href='/leagues/<%=league.id%>'>
+          <h4><%= league.league_name %></h4>
+          <img src="/assets/league_<%= league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
+        </a>
       </div>
-
-      <div class="col-lg-3">
-        <h2>Prize:</h2>
+      <div class="col-xs-4 col-xs-offset-2 col-sm-3 col-sm-offset-0">
+        <h4>Prize Money: $<%= number_with_delimiter(league.prize_money, :delimiter => ',') %></h4>
       </div>
-      <div class="col-lg-3">
-        <h2>Register</h2>
+      <div class="col-xs-4 col-sm-3">
+        <h4>
+          <% if user_signed_in? %>
+          <%= link_to "Register", new_league_team_path(league.id), class: "btn btn-primary"%>
+          <% else %>
+          <%= link_to "Register", new_user_session_path, class: "btn btn-primary"%>
+          <% end %>
+        </h4>
       </div>
     </div>
-
-    <% @leagues.each do |league| %>
-      <div class="row">
-        <div class="col-lg-6">
-          <a href='/leagues/<%=league.id%>'>
-            <img src="/assets/league_<%= league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
-            <h4>
-              <%= league.league_name %>
-            </h4>
-          </a>
-          <br>
-        </div>
-
-        <div class="col-lg-3">
-          <h4>
-            $<%= league.prize_money %>
-          </h4>
-        </div>
-        <div class="col-lg-3">
-          <h4>
-            <% if user_signed_in? %>
-            <%= link_to "Register", new_league_team_path(league.id), class: "btn btn-primary"%>
-            <% else %>
-            <%= link_to "Register", new_user_session_path, class: "btn btn-primary"%>
-            <% end %>
-          </h4>
-        </div>
-      </div>
-    <% end %>
-  </center>
-</html>
+  <% end %>
+</center>
