league image not loading in show league

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @league.league_name %></h1>
 
-<img src="/images/league_<%= @league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
+<img src="/assets/league_<%= @league.id %>.jpg" class="img-fluid" style="width: 40%; height: 40%"/>
 
 <p>
   <h4>
