made changes to about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -24,10 +24,10 @@
         <p>Also look to our results tab for updated results of all the matches and schedules tab for upcoming matches. </p>
         <h2>Features</h2>
         <ul>
-          <li>Aliquam venenatis leo et orci.</li>
-          <li>Pellentesque eleifend vulputate massa.</li>
-          <li>Vivamus eleifend sollicitudin eros.</li>
-          <li>Maecenas vitae nunc.</li>
+          <li>Can get daily updates about all the latest matches happening</li>
+          <li>Can follow your favourite team by signing up.</li>
+          <li>Will be able to message any player or coach.</li>
+          <li>Can get live scores about the current matches.</li>
           <li>Ut pretium odio eu nisi.</li>
           <li>Nam condimentum mi id magna.</li>
           <li>Pellentesque consectetuer, felis vel rhoncus.</li>
@@ -72,22 +72,6 @@
             </figure>
           </li>
           <li>
-            <figure><img src="/assets/Nguyen.jpg" width="130" height="130" alt="">
-              <figcaption>
-                <p class="team_name">Matthew</p>
-                <p class="team_title">Software Engineer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure><img src="/assets/luan.jpg" width="130" height="130" alt="">
-              <figcaption>
-                <p class="team_name">Luan</p>
-                <p class="team_title">Drone Pilot</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
             <figure><img src="/assets/Sunil.jpg" width="130" height="130" alt="">
               <figcaption>
                 <p class="team_name">Sunil</p>
@@ -100,6 +84,22 @@
               <figcaption>
                 <p class="team_name">Matthew</p>
                 <p class="team_title">Web and Database Developer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure><img src="/assets/Nguyen.jpg" width="130" height="130" alt="">
+              <figcaption>
+                <p class="team_name">Matthew</p>
+                <p class="team_title">Software Engineer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure><img src="/assets/luan.jpg" width="130" height="130" alt="">
+              <figcaption>
+                <p class="team_name">Luan</p>
+                <p class="team_title">Drone Pilot</p>
               </figcaption>
             </figure>
           </li>
