changed sign out btn type and made minimum password warning visible

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@ function showDivs(n) {
       <li><a href="/about">About</a></li>
       <% if user_signed_in? %>
       <li><%= link_to "Inbox", mailbox_inbox_path %></li>
-      <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-secondary" %></li>
+      <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
       <% else %>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
         <li><%= link_to "Sign in", new_user_session_path %></li>
